--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -57,4 +57,8 @@
     background-color: #4c51af;
   }
   
+  .Z {
+    position:relative;
+    z-index:1;
+  }
   
