--- a/client/src/Pages/Login/Login.css
+++ b/client/src/Pages/Login/Login.css
@@ -46,3 +46,7 @@
   color: white;
   text-decoration: underline;
 }
+.z{
+  position: relative;
+  z-index: 2;
+}
